RESOLVED FIXED68127
DFG JIT should not speculate integer if the value is always going to be used as a double anyway
https://bugs.webkit.org/show_bug.cgi?id=68127
Summary DFG JIT should not speculate integer if the value is always going to be used ...
Filip Pizlo
Reported 2011-09-14 15:30:42 PDT
The DFG JIT will speculate that a value is an integer if the prediction logic tells us so. But this is dangerously unnecessary if the value will always be used as a double. For example, if o.f is predicted integer but is always used as o.f * 1.5, then there is no point to speculating that o.f is an integer because even if we do, we still have to convert it to a double.
Attachments
the patch (6.42 KB, patch)
2011-09-14 15:34 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2011-09-14 15:34:30 PDT
Created attachment 107408 [details] the patch
Filip Pizlo
Comment 2 2011-09-14 16:06:35 PDT
Landed in r95136.
Note You need to log in before you can comment on or make changes to this bug.