DFG JIT should not speculate integer if the value is always going to be used as a double anyway https://bugs.webkit.org/show_bug.cgi?id=68127

Reviewed by Oliver Hunt.

Added a ValueToDouble node, which is a variant of ValueToNumber that
hints that it will only be used as a double and never as an integer.
Thus, it turns off integer speculation even if the value profiler
told us that the value source is an int. The logic for converting a
ValueToNumber into a ValueToDouble is found in Propagator.

This appears to be a 22% speed-up in imaging-darkroom.

* dfg/DFGNode.h:
* dfg/DFGNonSpeculativeJIT.cpp:
(JSC::DFG::NonSpeculativeJIT::compile):
* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::fixpoint):
(JSC::DFG::Propagator::toDouble):
(JSC::DFG::Propagator::fixupNode):
(JSC::DFG::Propagator::fixup):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compile):
(JSC::DFG::SpeculativeJIT::computeValueRecoveryFor):



Canonical link: https://commits.webkit.org/84018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95136 268f45cc-cd09-0410-ab3c-d52691b4dbfc