Source/JavaScriptCore/dfg/DFGNode.h
@@ -158,6 +158,9 @@ private:
     /* Arithmetic operators call ToNumber on their operands. */\
     macro(ValueToNumber, NodeResultNumber | NodeMustGenerate) \
     \
+    /* A variant of ValueToNumber, which a hint that the parents will always use this as a double. */\
+    macro(ValueToDouble, NodeResultNumber | NodeMustGenerate) \
+    \
     /* Add of values may either be arithmetic, or result in string concatenation. */\
     macro(ValueAdd, NodeResultJS | NodeMustGenerate) \
     \
